--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   /* color: rgba(255, 255, 255, 0.87); */
   /* background-color: #242424; */
 
@@ -12,4 +12,13 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+*{
+  margin: 0;
+  box-sizing: border-box;
+}
+:root{
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+}
